<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_TableBottlePlace" Id="{59226ff1-7df5-43ed-98cb-c70a30f0ca6e}">
    <Declaration><![CDATA[TYPE ST_TableBottlePlace :
STRUCT
	sProductName:STRING;
	iProductType:UINT;
	nState: nTableBottlePlaceState;
	iCurrentPosition: USINT;
	iPlaceNumber: USINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>