<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="nTableBottlePlaceState" Id="{e76810a4-c641-4fe2-9772-be01d895fc18}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE nTableBottlePlaceState :
(
	Empty := 0,
	BeforeWeighing := 1,
	Processing := 2,
	AfterWeighing := 3,
	NOK :=4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>